<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bitmap_sing_up"
    tools:context=".views.auth.LoginActivity">

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/ic_bitmap_user"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewMessageWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="?attr/listPreferredItemPaddingStart"
        android:layout_marginEnd="?attr/listPreferredItemPaddingEnd"
        android:lines="2"
        android:text="@string/text_value_message_welcome_login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewIcon"
        app:layout_constraintVertical_bias="0.06"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPersonUserName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="?attr/dialogPreferredPadding"
        android:layout_marginEnd="?attr/listPreferredItemPaddingEnd"
        android:hint="@string/text_value_input_user_name_login"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintTop_toBottomOf="@id/textViewMessageWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPersonUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/app_name"
            android:cursorVisible="true"
            android:textColor="@color/white"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/textInputLayoutPersonPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="?attr/dialogPreferredPadding"
        android:layout_marginEnd="?attr/listPreferredItemPaddingEnd"
        android:hint="@string/text_value_input_password_login"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPersonUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPersonPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/app_name"
            android:textColor="@color/white"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewActionRecoveryPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="?attr/listPreferredItemPaddingEnd"
        android:text="@string/text_value_recovery_password_login"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPersonPassword"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonActionLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="?attr/listPreferredItemPaddingEnd"
        android:layout_marginEnd="?attr/listPreferredItemPaddingEnd"
        android:background="@drawable/ic_bitmap_rectangle"
        android:text="@string/text_value_text_button_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewActionRecoveryPassword"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textViewActionRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_value_message_register_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonActionLogin"
        app:layout_constraintVertical_bias="0.06"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>